display weather values on the screen. placement to fix

--- a/software/src/station/CMakeLists.txt
+++ b/software/src/station/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(
 )
 
 target_link_libraries(  station
+                        display
                         weather_mode
                         hardware_spi
                         hardware_i2c
