--- a/software/.vscode/settings.json
+++ b/software/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "lcd.h": "c"
+        "lcd.h": "c",
+        "touchscreen.h": "c",
+        "systick.h": "c"
     }
 }
