wip : drawing mode implementation -> how do i handle gesture management and drawing mode ?

--- a/software/.vscode/settings.json
+++ b/software/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "lcd.h": "c",
         "touchscreen.h": "c",
-        "systick.h": "c"
+        "systick.h": "c",
+        "drawing_mode.h": "c"
     }
 }
